<resources>
    <string name="app_name">TrackSports</string>
    <string name="title_home">Inicio</string>
    <string name="title_map">Mapa</string>
    <string name="title_diary">Diario</string>
    <string name="title_profile">Perfil</string>
    <string name="title_settings">Ajustes</string>
    <string name="text_notification_running_app">Se está ejecutando la aplicación</string>
    <string name="text_check_to_exit">Pulse atrás otra vez para salir</string>
    <string name="add_profile_step1">Añadir perfil: Paso 1 de 4</string>
    <string name="add_profile_step2">Añadir perfil: Paso 2 de 4</string>
    <string name="add_profile_step3">Añadir perfil: Paso 3 de 4</string>
    <string name="add_profile_step4">Añadir perfil: Paso 4 de 4</string>
    <string name="button_add_profile">Añadir perfil</string>
    <string name="login_hint">Introduce tu usuario</string>
    <string name="password_hint">Introduce tu contraseña</string>
    <string name="password_repeat_hint">Repita la contraseña</string>
    <string name="name_hint">Introduce tu nombre</string>
    <string name="birhtday_hint">Introduce tu fecha de nacimiento</string>
    <string name="button_birthday">Fecha de nacimiento</string>
    <string name="height_hint">Introduce tu altura (cm)</string>
    <string name="weight_hint">Introduce tu peso (kg)</string>
    <string name="step_length_hint">Introduce tu paso (cm)</string>
    <string name="button_previous">Anterior</string>
    <string name="button_next">Siguiente</string>
    <string name="button_finish">Finalizar</string>
    <string name="gender_male">Hombre</string>
    <string name="gender_female">Mujer</string>
    <string name="image_picker_description">Imagen de perfil</string>
    <string name="button_image_picker">Elegir imagen de perfil</string>
    <string name="years_measure">años</string>
    <string name="height_measure">cm.</string>
    <string name="weight_measure">kg.</string>
    <string name="image_picker_title_message">Seleccione una opción:</string>
    <string name="image_picker_file">Fichero</string>
    <string name="image_picker_camera">Cámara</string>
    <string name="image_picker_finish_action">Finalice la acción</string>
    <string name="profile_option_edit">Editar</string>
    <string name="profile_option_remove">Eliminar</string>
    <string name="profile_option_sync">Sincronizar</string>
    <string name="profile_option_set_default">Se ha establecido el perfil como defecto</string>
    <string name="profile_option_remove_succesful">Se ha eliminado el perfil correctamente</string>
    <string name="profile_sync">Sincronizado</string>
    <string name="profile_not_sync">No sincronizado</string>
    <string name="profile_sync_problem">Problema en el sincronizado</string>
    <string name="profile_already_sync">El perfil ya está sincronizado</string>
    <string name="profile_delete_confirmation_title">Eliminar perfil</string>
    <string name="profile_delete_confirmation_content">¿Estás seguro que desea eliminar el perfil y todos sus ejercicios asociados? </string>
    <string name="profile_delete_confirmation_ok_button">Aceptar</string>
    <string name="profile_delete_confirmation_cance_button">Cancelar</string>
    <string name="dialog_countdown_start_exercise">El ejercicio va comenzar</string>
    <string name="progress_dialog_save_exercise_title">Guardando</string>
    <string name="progress_dialog_save_exercise_content">Guardando el ejercicio</string>
    <string name="spinner_chrono_title">Duración</string>
    <string name="spinner_chrono_time_remaining_title">Tiempo restante</string>
    <string name="spinner_distance_title">Distancia</string>
    <string name="spinner_distance_remaining_title">Distancia restante</string>
    <string name="spinner_speed_title">Velocidad actual</string>
    <string name="spinner_speed_pace_title">Ritmo</string>
    <string name="spinner_speed_max_title">Velocidad máxima</string>
    <string name="spinner_speed_avg_title">Velocidad media</string>
    <string name="spinner_steps_title">Pasos caminados</string>
    <string name="spinner_calories_burned_title">Calorias quemadas</string>
    <string name="spinner_calories_burned_pace_title">Calorias quemadas/minuto</string>
    <string name="spinner_step_pace_title">Ritmo pasos</string>
    <string name="spinner_altitude_title">Altitud</string>
    <string name="spinner_altitude_min_title">Altitud mínima</string>
    <string name="spinner_altitude_max_title">Altitud máxima</string>
    <string name="gps_disabled_settings">Configuración GPS</string>
    <string name="gps_disabled_settings_msg">¡Ojo! el GPS está deshabilitado, ¿desea activarlo ahora? </string>
    <string name="gps_disabled_settings_ok_button">Configuración</string>
    <string name="gps_disabled_settings_cancel_button">Cancelar</string>
    <string name="finish_tracking_alert">Detener actividad</string>
    <string name="finish_tracking_alert_msg">¿Estás seguro que deseas detener la actividad?</string>
    <string name="finish_tracking_alert_ok_button">Aceptar</string>
    <string name="finish_tracking_alert_cancel_button">Cancelar</string>
    <string name="default_profile_not_exists_alert">Usuario por defecto</string>
    <string name="default_profile_not_exists_alert_msg">No se ha establecido ningún usuario por defecto, ¿desea iniciar la actividad de todos modos?</string>
    <string name="default_profile_not_exists_alert_ok_button">Aceptar</string>
    <string name="default_profile_not_exists_alert_cancel_button">Cancelar</string>
    <string name="speaker_start_exercise">Empezamos</string>
    <string name="tab_diary_list">Lista</string>
    <string name="tab_diary_pending_list">Pendientes</string>
    <string name="tab_diary_graph">Gráfica</string>
    <string name="exercise_distance_title">Distancia</string>
    <string name="exercise_duration_title">Duración</string>
    <string name="exercise_calories_title">Calorías</string>
    <string name="exercise_option_sync">Sincronizar</string>
    <string name="exercise_option_remove">Eliminar</string>
    <string name="exercise_option_title_message">Seleccione una opción:</string>
    <string name="hours">h</string>
    <string name="minutes">min</string>
    <string name="seconds">s</string>
    <string name="meters">m</string>
    <string name="kilometers">km</string>
    <string name="altitude_measure">m</string>
    <string name="speed_measure">km/h</string>
    <string name="speed_pace_measure">min/km</string>
    <string name="step_pace_measure">pasos/min</string>
    <string name="calories_measure">kcal</string>
    <string name="exercise_sync">Sincronizado</string>
    <string name="exercise_not_sync">No sincronizado</string>
    <string name="exercise_sync_problem">Problema en la sincronización</string>
    <string name="button_add_exercise">Añadir ejercicio</string>
    <string name="tab_exercise_summary">Resumen</string>
    <string name="tab_exercise_graph">Gráficas</string>
    <string name="tab_exercise_route">Recorrido</string>
    <string name="exercise_detail_startTime">Hora de Inicio:</string>
    <string name="exercise_detail_duration">Duración:</string>
    <string name="exercise_detail_distance">Distancia:</string>
    <string name="exercise_detail_speedAvg">Velocidad media:</string>
    <string name="exercise_detail_speedMax">Velocidad máxima:</string>
    <string name="exercise_detail_speedPace">Ritmo medio:</string>
    <string name="exercise_detail_altitudeMin">Altitud mínima:</string>
    <string name="exercise_detail_altitudeMax">Altitud máxima:</string>
    <string name="exercise_detail_caloriesBurned">Calorías quemadas:</string>
    <string name="exercise_detail_steps">Pasos recorridos:</string>
    <string name="graph_duration_title">Duracion</string>
    <string name="graph_distance_title">Distancia</string>
    <string name="graph_speed_pace_title">Ritmo medio</string>
    <string name="graph_speed_title">Velocidad media</string>
    <string name="graph_calories_title">Calorias</string>
    <string name="graph_altitude_title">Altitud media</string>
    <string name="graph_distance_label">Distancia (km)</string>
    <string name="graph_altitude_label">Altitud (m)</string>
    <string name="graph_speed_pace_label">Ritmo (min/km)</string>
    <string name="graph_speed_label">Velocidad (km/h)</string>
    <string name="graph_time_label">Tiempo (h:min)</string>
    <string name="graph_day_label">Fecha (día/mes)</string>
    <string name="graph_calories_label">Calorias (kcal)</string>
    <string name="exercise_option_remove_succesful">Se ha eliminado el ejercicio correctamente</string>
    <string name="pending_exercise_add_title">Añadir ejercicio</string>
    <string name="pending_exercise_startTime_hint">Hora de inicio</string>
    <string name="pending_exercise_startTime_button">Seleccionar hora de inicio</string>
    <string name="pending_exercise_duration_hint">Duración (min)</string>
    <string name="pending_exercise_distance_hint">Distancia (km)</string>
    <string name="pending_exercise_comments_hint">Comentarios</string>
    <string name="pending_exercise_add_button">Añadir</string>
    <string name="pending_exercise_comments_title">Comentarios</string>
    <string name="pending_exercise_no_comments">No se han especificado comentarios</string>
    <string name="pending_exercise_option_title_message">Seleccione una opción:</string>
    <string name="pending_exercise_option_remove_succesful">Se ha eliminado el ejercicio pendiente correctamente</string>
    <string name="date_time_picker_title">Selecciona la hora de inicio</string>
    <string name="date_time_picker_cancel_button">Cancelar</string>
    <string name="date_time_picker_accept_button">Aceptar</string>
    <string name="notification_pending_exercise_remaining">%1$s minutos para ejecutar el ejercicio</string>
    <string name="notification_pending_exercise_last_minute">Se va a ejecutar el ejercicio en menos de 1 minuto</string>
    <string name="notification_discard_button">Descartar</string>
    <string name="notification_start_button">¡Empezar YA!</string>
    <string name="exercise_already_sync">El ejercicio ya está sincronizado</string>
    <string name="all_exercises_already_sync">Ya están sincronizados todos los ejercicios</string>
    <string name="exercise_delete_confirmation_title">Eliminar ejercicio</string>
    <string name="exercise_delete_confirmation_content">¿Estás seguro que desea eliminar el ejercicio? </string>
    <string name="exercise_delete_confirmation_ok_button">Aceptar</string>
    <string name="exercise_delete_confirmation_cance_button">Cancelar</string>
    <string name="pending_exercise_delete_confirmation_title">Eliminar ejercicio pendiente</string>
    <string name="pending_exercise_delete_confirmation_content">¿Estás seguro que desea eliminar el ejercicio pendiente? </string>
    <string name="pending_exercise_delete_confirmation_ok_button">Aceptar</string>
    <string name="pending_exercise_delete_confirmation_cance_button">Cancelar</string>
    <string name="progress_dialog_autentication_title">Autenticando</string>
    <string name="progress_dialog_autentication_content">Autenticando el usuario</string>
    <string name="progress_dialog_registration_title">Registrando</string>
    <string name="progress_dialog_registration_content">Registrando el usuario</string>
    <string name="progress_dialog_edit_title">Editando</string>
    <string name="progress_dialog_edit_content">Editando el usuario</string>
    <string name="progress_dialog_sync_profile_title">Sincronizando</string>
    <string name="progress_dialog_sync_profile_content">Sincronizando el usuario</string>
    <string name="progress_dialog_sync_exercise_title">Sincronizando</string>
    <string name="progress_dialog_sync_exercise_content">Sincronizando el ejercicio</string>
    <string name="progress_dialog_sync_exercises_content">Sincronizando los ejercicios</string>
</resources>