<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Relative_Layout_user_details"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_marginBottom="0dp"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
    <TextView
        android:id="@+id/textView_addProfile_step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
		android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"                
        android:layout_alignParentTop="true"
        android:text="@string/add_profile_step2"
        style="@style/textTitleStyle"/>    
    
	<ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/button_user_details_previous"
        android:layout_below="@+id/textView_addProfile_step2" >
    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
    
		    <EditText
		        android:id="@+id/editText_details_name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentStart="true"
		        android:layout_alignParentEnd="true"
		        android:layout_alignParentTop="true"
		        android:ems="10"
		        android:hint="@string/name_hint"
		        android:inputType="textPersonName" >
		
		        <requestFocus android:layout_width="match_parent" />

		    </EditText>
		
		    <LinearLayout
		        android:id="@+id/linear_layout_details_birthday"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:layout_below="@+id/editText_details_name">

			    <EditText
			        android:id="@+id/editText_details_birthday"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center"
			        android:ems="10"
			        android:hint="@string/birhtday_hint"
			        android:layout_weight="9"
			        android:inputType="date" />
			
			    <ImageButton
			        android:id="@+id/button_select_birthday"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:contentDescription="@string/button_birthday"
			        android:layout_weight="1"
			        android:src="@drawable/calendar" />		        
		    </LinearLayout>
		    	
		    <EditText
		        android:id="@+id/editText_details_height"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentStart="true"
		        android:layout_alignParentEnd="true"		        
		        android:layout_below="@+id/linear_layout_details_birthday"
		        android:layout_marginTop="20dp"
		        android:ems="10"
		        android:hint="@string/height_hint"
		        android:inputType="number" />
		
		    <EditText
		        android:id="@+id/editText_details_weight"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentStart="true"
		        android:layout_alignParentEnd="true"		        
		        android:layout_below="@+id/editText_details_height"
		        android:layout_marginTop="20dp"
		        android:ems="10"
		        android:hint="@string/weight_hint"
		        android:inputType="number" />	    
		    
		    <Spinner
		        android:id="@+id/spinner_gender"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentStart="true"
		        android:layout_alignParentEnd="true"		        
		        android:layout_below="@+id/editText_details_step_length"
		        android:layout_marginTop="20dp"
		        android:entries="@array/spinnerGender" />
		
		    <EditText
		        android:id="@+id/editText_details_step_length"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentStart="true"
		        android:layout_alignParentEnd="true"		        
		        android:layout_below="@+id/editText_details_weight"
		        android:layout_marginTop="20dp"
		        android:ems="10"
		        android:hint="@string/step_length_hint"
		        android:inputType="number" />	    
    
    	    </RelativeLayout>
    </ScrollView>
    
    <ImageButton
		android:id="@+id/button_user_details_previous"
		android:layout_width="60dp"
		android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/left_arrow"
        android:contentDescription="@string/button_previous" />	    
    
    <ImageButton
        android:id="@+id/button_user_details_next"
		android:layout_width="60dp"
		android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/right_arrow"
        android:contentDescription="@string/button_next"/>

</RelativeLayout>
