<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

	<TextView
        android:id="@+id/textView_addProfile_step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
		android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"                
        android:layout_alignParentTop="true"
        android:text="@string/add_profile_step3"
        style="@style/textTitleStyle"/>  
    
	<ScrollView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/button_image_select_previous"
	    android:layout_below="@+id/textView_addProfile_step3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
	    android:fillViewport="true" >
    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
    
		    <ImageView
		        android:id="@+id/imageView_picker"
		        android:layout_width="300dp"
		        android:layout_height="300dp"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentStart="true"
		        android:layout_alignParentEnd="true"
		        android:layout_alignParentTop="true"
		        android:contentDescription="@string/image_picker_description"
		        android:src="@drawable/profile_solo" />

		    <Button
		        android:id="@+id/button_image_picker"
		        android:layout_width="300dp"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@+id/imageView_picker"
		        android:text="@string/button_image_picker" />		    
		    
		</RelativeLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/button_image_select_previous"
		android:layout_width="60dp"
		android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/left_arrow"
        android:contentDescription="@string/button_previous"/>
	
	<ImageButton
	     android:id="@+id/button_image_select_next"
		android:layout_width="60dp"
		android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/right_arrow"
        android:contentDescription="@string/button_next"/>
    
</RelativeLayout>