<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView_addProfile_step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
		android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"                
        android:layout_alignParentTop="true"
        android:text="@string/add_profile_step1"
        style="@style/textTitleStyle"/>    
    
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/button_login_next"
        android:layout_below="@+id/textView_addProfile_step1" >
    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	    
		    <EditText
		        android:id="@+id/editText_login_user"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentEnd="true"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentStart="true"
		        android:layout_alignParentTop="true"
		        android:ems="10"
		        android:hint="@string/login_hint"
		        android:inputType="text" >

		        <requestFocus />
		    </EditText>
		
		    <EditText
		        android:id="@+id/editText_login_password"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentStart="true"
		        android:layout_alignParentEnd="true"
		        android:layout_below="@+id/editText_login_user"
		        android:layout_marginTop="20dp"
		        android:ems="10"
		        android:hint="@string/password_hint"
		        android:inputType="textPassword" />
		
		    <EditText
		        android:id="@+id/editText_repeat_password"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
				android:layout_alignParentStart="true"
		        android:layout_alignParentEnd="true"        
		        android:layout_below="@+id/editText_login_password"
		        android:layout_marginTop="20dp"
		        android:ems="10"
		        android:hint="@string/password_repeat_hint"
		        android:inputType="textPassword" />  
	    
	    </RelativeLayout>
    </ScrollView>
    
    
    <ImageButton
        android:id="@+id/button_login_next"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/right_arrow"
        android:contentDescription="@string/button_next" />

</RelativeLayout>
