<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

	<TextView
        android:id="@+id/textView_addProfile_step4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
		android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"                
        android:layout_alignParentTop="true"
        android:text="@string/add_profile_step4"
        style="@style/textTitleStyle"/>     
    
	<FrameLayout
	    android:id="@+id/map_position_layout"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_above="@+id/button_map_position_previous"
	    android:layout_below="@+id/textView_addProfile_step4"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp" >

	</FrameLayout>

    <ImageButton
        android:id="@+id/button_map_position_previous"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
		android:background="@drawable/left_arrow"
		android:contentDescription="@string/button_previous"/>

    <ImageButton
        android:id="@+id/button_map_position_finish"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/check_mark"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/button_finish"/>    
    
</RelativeLayout>