<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView_startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Fecha_inicio" />

    <TextView
        android:id="@+id/textView_distance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_duration_title"
        android:layout_alignBottom="@+id/textView_duration_title"
        android:layout_alignLeft="@+id/textView_startTime"
        android:text="@string/exercise_distance_title" />

    <TextView
        android:id="@+id/textView_duration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_startTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/exercise_duration_title" />

    <TextView
        android:id="@+id/textView_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_distance_title"
        android:layout_below="@+id/textView_distance_title"
        android:layout_marginTop="15dp"
        android:text="" />

    <TextView
        android:id="@+id/textView_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_distance"
        android:layout_alignLeft="@+id/textView_duration_title"
        android:text="" />

    <TextView
        android:id="@+id/textView_comments_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_distance"
        android:layout_below="@+id/textView_distance"
        android:layout_marginTop="15dp"
        android:text="@string/pending_exercise_comments_title" />

    <TextView
        android:id="@+id/textView_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_comments_title"
        android:layout_below="@+id/textView_comments_title"
        android:layout_marginTop="15dp"
        android:text="" />

</RelativeLayout>